[gd_scene load_steps=9 format=3 uid="uid://bm4rf6dfamgsd"]

[ext_resource type="Script" path="res://Scenes/Objects/bullet.gd" id="1_nb6cv"]
[ext_resource type="Texture2D" uid="uid://cpicawkky68cq" path="res://Sprites/Zombee_shot.png" id="2_6oq22"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yoe3d"]
size = Vector2(17, 17)

[sub_resource type="Animation" id="Animation_efpvq"]
resource_name = "fade"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1n2ca"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_twdyv"]
_data = {
"fade": SubResource("Animation_efpvq"),
"idle": SubResource("Animation_1n2ca")
}

[sub_resource type="Animation" id="Animation_pr3eo"]
resource_name = "flying"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t6fc"]
_data = {
"flying": SubResource("Animation_pr3eo")
}

[node name="Bullet" type="Area2D"]
z_index = -3
collision_layer = 2
collision_mask = 5
script = ExtResource("1_nb6cv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_6oq22")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 0.5)
shape = SubResource("RectangleShape2D_yoe3d")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_twdyv")
}

[node name="frame" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_8t6fc")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
